--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@ opacity:0.8;
 
 <body>
 <video autoplay muted loop playsinline class="bg-video">
-    <source src="video.mp4" type="video/mp4">
+    <source src="Video.mp4" type="video/mp4">
 </video>
 
 <div class="video-overlay"></div>
@@ -759,3 +759,4 @@ document.getElementById("content").innerHTML=`
 
 </body>
 </html>
+
