--- a/index.html
+++ b/index.html
@@ -692,7 +692,6 @@ function playSong(title) {
 
     const audio = document.getElementById("loveAudio");
 
-    // Map songs to actual mp3 files
     const songs = {
         "Kanazhaga": "audio/Kanazhaga.mp3",
         "Kadhal sadugudu": "audio/_Alaipayuthey_Kadhal_Sadugudu.mp3",
@@ -702,13 +701,21 @@ function playSong(title) {
     };
 
     audio.src = songs[title];
-    audio.play();
+    audio.load();
 
-    // Wait 30 seconds before going to next page
-    setTimeout(() => {
-        finalPage();
-    }, 2000);
+    audio.play()
+        .then(() => {
+            // Go to next page ONLY if audio starts successfully
+            setTimeout(() => {
+                finalPage();
+            }, 2000);
+        })
+        .catch(error => {
+            console.log("Audio failed:", error);
+            alert("Audio file not found or not supported!");
+        });
 }
+
 
 
 function song(title)
@@ -759,4 +766,5 @@ document.getElementById("content").innerHTML=`
 
 </body>
 </html>
+
 
