--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ animation:scrollText 12s linear infinite;
     font-family: 'Poppins', sans-serif;
     font-size: 18px;
     margin: 8px 0;
-    color: #ac0cd0;
+    color: #dbd8dc;
 }
 
 .signature {
@@ -767,6 +767,7 @@ document.getElementById("content").innerHTML=`
 
 </body>
 </html>
+
 
 
 
