--- a/index.html
+++ b/index.html
@@ -694,10 +694,10 @@ function playSong(title) {
 
     const songs = {
     "Kanazhaga": "audio/Kanazhaga.mp3",
-    "Kadhal sadugudu": "audio/_Alaipayuthey_Kadhal_Sadugudu.mp3",
-    "Ivan yaaro": "audio/_Ivan_Yaaro_Ivan_Yaaro.mp3",
-    "Uyire uyire oh oh": "audio/_Oh_Oh_Thangamagan.mp3",
-    "Inum konjam Neram": "audio/_Innum_Konja_Neram_Mariyan.mp3"
+    "Kadhal sadugudu": "audio/Alaipayuthey_Kadhal_Sadugudu.mp3",
+    "Ivan yaaro": "audio/Ivan_Yaaro_Ivan_Yaaro.mp3",
+    "Uyire uyire oh oh": "audio/Oh_Oh_Thangamagan.mp3",
+    "Inum konjam Neram": "audio/Innum_Konja_Neram_Mariyan.mp3"
 };
 
 
@@ -767,6 +767,7 @@ document.getElementById("content").innerHTML=`
 
 </body>
 </html>
+
 
 
 
