--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@ ${placeCard("Beach Walk","https://images.unsplash.com/photo-1507525428034-b723cf
 ${placeCard("Rooftop Dinner","https://images.unsplash.com/photo-1414235077428-338989a2e8c0")}
 ${placeCard("Long Drive","https://images.unsplash.com/photo-1503376780353-7e6692767b70")}
 ${placeCard("Cafe Date","https://images.unsplash.com/photo-1495474472287-4d71bcdd2085")}
-${placeCard("Temple Visit","https://images.unsplash.com/photo-1593642532400-2682810df593")}
+${placeCard("Temple Visit","https://images.unsplash.com/photo-1590766940554-634a7ed41450?auto=format&fit=crop&w=800&q=80")}
 
 </div>
 `;
@@ -767,6 +767,7 @@ document.getElementById("content").innerHTML=`
 
 </body>
 </html>
+
 
 
 
