--- a/index.html
+++ b/index.html
@@ -733,11 +733,11 @@ document.getElementById("content").innerHTML=`
   <div class="overlay"></div>
 
   <div class="final-card">
-    <h1 class="title">It’s a Date Pattukutty 💜</h1>
+    <h1 class="title">Happy Valentine's Day💜</h1>
 
     <div class="love-letter">
       <p>
-      Happy Valentine's Day My Pattukutty 💜<br><br>
+       My Pattukutty 💜<br><br>
       From the moment we chose our movie 🎬  
       to the place we dreamed of 🌆  
       and the song that plays our heartbeat 🎶…<br><br>
@@ -767,6 +767,7 @@ document.getElementById("content").innerHTML=`
 
 </body>
 </html>
+
 
 
 
