--- a/index.html
+++ b/index.html
@@ -513,11 +513,11 @@ opacity:0.8;
 <div class="video-overlay"></div>
 
 <div class="love-banner top-banner">
-<span>💜 I LOVE YOU PATTUKUTTY 💜 I LOVE YOU PATTUKUTTY 💜</span>
+<span>💜 I LOVE YOU PATTUKUTTY 💜 I LOVE YOU PATTUKUTTY 💜 Happy Valentine's Day💜</span>
 </div>
 
 <div class="love-banner bottom-banner">
-<span>💜 FOREVER YOURS 💜 MY VALENTINE 💜</span>
+<span>💜Happy Valentine's Day 💜 FOREVER YOURS 💜 MY VALENTINE 💜 </span>
 </div>
 
 <div class="container" id="content">
@@ -767,6 +767,7 @@ document.getElementById("content").innerHTML=`
 
 </body>
 </html>
+
 
 
 
